--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@
   border-radius: 10px;
   flex-shrink: 0;
   margin-right: 10px;
+  transition: transform 0.5s ease-in-out;
+}
+.img-container:hover{
+  transform: scale(1.1);
 }
 .main-img{
   width: 100%;
@@ -41,7 +45,11 @@
 }
 .marker{
   width: 10px;
-  margin-right: 1px;
+  margin-right: 4px;
+  transition: transform 0.4s ease-in-out;
+}
+.marker:hover{
+  transform: scale(1.2);
 }
 .country{
   font-size: 0.7rem;
@@ -70,4 +78,7 @@ div > a:visited{
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
   overflow: hidden;
+}
+article{
+  margin-bottom: 20px;
 }
